--- a/app/views/_timeline_stats.html.erb
+++ b/app/views/_timeline_stats.html.erb
@@ -4,6 +4,6 @@
 <% image_size ||= 40 %>
 <a class="picture" href="<%= resource(timeline.user, :timelines) %>"><img src="<%= gravatar_image_url(timeline.user.email, image_size) %>"/></a>
 <div class="stats">
-  <a class="title" href="<%= resource(timeline.user, timeline, :cue => cue_event ? cue_event.id : nil) %>"><%=timeline.title.truncate(40) %></a>
+  <a class="title" href="<%= resource(timeline.user, timeline, :cue => cue_event ? cue_event.id : nil) %>" title="<%= timeline.title %>"><%=timeline.title.truncate(40) %></a>
   <a class="name" href="<%= resource(timeline.user, :timelines) %>"><%= timeline.user.full_name %></a>
 </div>
