--- a/app/views/timeline_events/cross_section.html.erb
+++ b/app/views/timeline_events/cross_section.html.erb
@@ -1,10 +1,10 @@
 <% unless @timeline_events.empty? %>
   <% @timeline_events.each do |te| %>
   <div class="cross_section">
-    <%= partial './timeline_stats', :timeline => te.timeline, :cue_event => te.event, :image_size => 25 %>
+    <%= partial './timeline_stats', :timeline => te.timeline, :cue_event => te.event, :image_size => 40, :trunc => 250 %>
     <div class="clear"></div>
     <div class="interpretation">
-      <a href="<%= resource(te.timeline.user, te.timeline, :cue => te.event) %>"><%= te.interpretation ? te.interpretation.truncate(100) : "" %></a>
+      <a href="<%= resource(te.timeline.user, te.timeline, :cue => te.event) %>"><%= te.interpretation ? te.interpretation.truncate(250) : "" %></a>
     </div>
     <div class="clear"></div>
   </div>
