Factor out javascript libraries; fixes to upgrade to DM 0.10; respect path_prefix; remove source critique

--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -18,7 +18,7 @@
   	  <div id="header">
         <div id="projectname">
           <a href="<%= url(:events) %>"><h1>Emergent Time</h1></a>
-          <div id="byline">A collaborative timelining tool for humanists and social scientists.  <a id="docs" class="assemble" href="<%= Merb::Config[:path_prefix] %>/docs/intro.html">Read more...</a></div>
+          <div id="byline">A collaborative timelining tool for humanists and social scientists.  <%= link_to "Read more...", url(:docs, :page => 'intro', :id => 'docs'), :class=> 'assemble'%></div>
         </div>
         <div id="logo"><a href="<%= url(:events) %>"><%= image_tag "/images/rep.core/hyperstudio.jpg" %></a></div>
         <div id="navigation">
