Added interpretation edit facility

--- a/app/views/docs/intro.html.erb
+++ b/app/views/docs/intro.html.erb
@@ -90,6 +90,7 @@ top to bottom, like a traditional narrative timeline.</p>
 &#8211; just like a blog post.  Like a blog post, others can comment and discuss it.</p>
 
   <div>
+<!--
   <div class="panel">
 	<h3>Source critique</h3>
 
@@ -111,6 +112,7 @@ whether to use an event in their own timeline.</p>
 incorrect, create your own.  Later users will use the version they feel is
 most correct, and existing ones may switch.</p>
 </div>
+-->
 <div class="panel">
 	<h3>Digital Humanities</h3>
 
@@ -134,12 +136,11 @@ critique.</p>
 <p><%= link_to "More detail about Emergent Time&#8217;s aggregate timelines", url(:docs, :page => "ranking") %></p>
 
 </div>
-<div class="panel">
+<!--
+ <div class="panel">
 	<h3>What&#8217;s next?</h3>
 
-	<p>Coming features:</p>
-	
-	<p>* Basic improvements like event and interpretation editing.</p>
+	<p>Potential features:</p>
 
   <p>* Publishing. Keep a timeline private until you decide to share it with the
 world.</p>
@@ -156,4 +157,5 @@ commented on.</p>
 together.</p>
 
 </div>
+-->
 </div>
