--- a/app/views/_interpretations.html.erb
+++ b/app/views/_interpretations.html.erb
@@ -1,9 +1,12 @@
 <ul id="events">
-<% interpretations.each do |te| -%>
+<% interpretations.sort.each do |te| -%>
   <li class="event" db_id="<%= te.id %>" evt_start="<%= te.event.start.to_json %>">
-    <div class="event_container"> 
+    <div class="event_container">
+      <% # TODO. activate edit and remove work the same way: see timeline_event/show.html.erb -%>
       <div class="options">
-        <div class="event_edit" title="Edit this event"></div>
+        <a href="<%= url(:edit_timeline_event, :id => te.id) %>" class='assemble {width: 850, height: 500}'>
+          <div class="event_edit" title="Edit this event"></div>
+        </a>
         <div class="event_remove" title="Remove this event"></div>
       </div>
       <div class="event_dates"><%= te.event.start.formatted(:emt_date) %><%= " &mdash; " + te.event.end.formatted(:emt_date) if te.event.end %></div>
