--- a/app/views/timelines/show.json.erb
+++ b/app/views/timelines/show.json.erb
@@ -9,7 +9,8 @@
 <%            'title'       => te.event.title || te.event.description.truncate, %>
 <%            'real_title'  => te.event.title, %>
 <%            'description' => te.event.description,            %>
-<%            'interpretation' => te.interpretation }     %>
+<%            'interpretation' => te.interpretation, %>
+<%            'links'       => te.event.links }     %>
 <%          end %>
 <%        }                                               %>
 
