--- a/app/views/events/suggest.json.erb
+++ b/app/views/events/suggest.json.erb
@@ -7,7 +7,8 @@
 <%            'end'         => e.end ? e.end : nil,  %>
 <%            'real_title'       => e.title ? e.title : nil, %>
 <%            'description' => e.description,            %>
-<%            'interpretation' => '' }     %>
+<%            'interpretation' => '',     %>
+<%            'links'       => e.links }     %>
 <%          end %>
 <%        }                                               %>
 
