Smaller timeline scale

--- a/app/views/exceptions/unauthenticated.html.erb
+++ b/app/views/exceptions/unauthenticated.html.erb
@@ -43,6 +43,6 @@ wardrobe.&#8221;</p>
 
 	<p>Anything with a series of events you&#8217;d like to collect together and interpret.</p>
 
-  <p><a id="intro" class="assemble" href="/docs/intro.html">Read more...</a></p>
+  <p><%= link_to "Read more...", url(:docs, :page => 'intro', :id => 'docs'), :class=> 'assemble'%></p>
   </div>
 </div>
